--- a/npsreport2018.cls
+++ b/npsreport2018.cls
@@ -657,12 +657,12 @@
 }
 
 % Provide reasonable defaults
-\department{Computer Science}
-\departmentchair{Peter Denning}
-\researchchair{Jeffrey D. Paduan}
-\president{Ronald A. Route}
-\provost{Douglas A. Hensler}
-\viceprovost{Douglas Moses}
+\department{Mechanical and Aerospace Engineering}
+\departmentchair{Brian Bingham}
+\researchchair{Kevin B. Smith}
+\president{Ann Rondeau}
+\provost{Scott Gartner}
+\viceprovost{Jomana Amara}
 \memberOne[\@@thesisadvisor]{\@thesisadvisor}
 \memberTwo[\@committeechair]{\@committeechair}
 \memberThree{}
@@ -1558,8 +1558,8 @@
 
 \newcommand{\NPSsignature}{
   % this page is always (iii), so force skip (used in non-twoside mode)
-  \ifnum \c@page < 3 \thisPageIntentionallyLeftBlankForced \fi
-  \setcounter{page}{3}          % do not reset to page 1
+  %\ifnum \c@page < 3 \thisPageIntentionallyLeftBlankForced \fi
+  %\setcounter{page}{3}          % do not reset to page 1
   \begin{center}
   \textbf{NAVAL POSTGRADUATE SCHOOL\\Monterey, California 93943-5000}
   \end{center}
@@ -1599,8 +1599,11 @@
   {\bf Reviewed by:} \> {\bf Released by:} \\[\sigspace]
   \\ \vspace{1.5\bigskipamount}
   \rule{2.5in}{1pt}  \> \rule{2.5in}{1pt} \\
-  \@departmentchair\xspace, Chairman  \> \@researchchair \\
-  \@department       \> \mbox{Dean of Research} \\
+  %\@departmentchair\xspace, Chair  \> \@researchchair \\
+  \@departmentchair  \> \@researchchair \\
+  %Jomana Amara  \> \@researchchair \\
+  \@department       \> \mbox{Vice Provost of Research} \\
+  %\mbox{Vice Provost of Academic Leadership}       \> \mbox{Vice Provost of Research} \\
   \end{tabbing}
   \newpage
   \thisPageIntentionallyLeftBlank
