--- a/techreport_timeseries_from_psd.tex
+++ b/techreport_timeseries_from_psd.tex
@@ -4,9 +4,6 @@
 
 
 % Put extra packages you may need to customize 
-
-\usepackage{hologo,lipsum} % provides \BibTex and \lipsum macros, for demos; can delete this package (just filler text)
-\newcommand{\BibTeX}{\hologo{BibTeX}} %provides \BibTeX macro for demos; can delete this command
 %\usepackage[fontsize=20pt,text=To~be~replaced~by~your~thesis~processor~using~the~data~from~your~Python~Thesis~Dashboard,color=red]{draftwatermark}
 \usepackage[bottom]{footmisc} % Places footnotes at the bottom of the page
 
@@ -22,7 +19,7 @@
 \usepackage{units}
 \usepackage{IEEEtrantools}
 
-\title{Applying Spectral Representation to Simulation of Stochastic Processes: Scaling, Units and Sidedness}
+\title{Applying Spectral Representation to Simulation of Stochastic Processes: Scaling, Units, Sidedness}
 
 \author{Brian Bingham}
 \rank{Professor, Mechanical and Aerospace Engineering Department}  
@@ -33,7 +30,9 @@
 
 % Paste abstract from your thesis dashboard. New paragraphs start after an empty line.
 \abstract{
-Simulating sample functions of a stochastic process defined by a power spectral density is theoretically well defined and a variety of methods are available, most common are the summation of cosines and fast Fourier transform (FFT) approaches.  Applying the mathematical theory to physical phenomena crucially depends on the conventions used in the mathematical definitions, normalization and scaling and appropriate use of one and two-sided spectra.  This report synthesizes the basic mathematical background, presented with the intent of providing a self-consistent set of conventions for the practitioner.  We also present a complete example in MATLAB to demonstrate the important details of considering scaling, units and sidedness.
+Simulation provides a virtual environment to support development engineering system through test and evaluation in variety of environmental conditions. In order to provide quantitative results, the simulated environmental conditions must be derived from accurate descriptions of the physical environment, which are often described as stochastic processes.   For example, authentic synthetic wind and wave environments are an important part of evaluating ship designs.  For these sythetic environments to accurately represent they physical operating environment they must be statistically consistent with the cooresponding oceanographic and meteorological stochastic descriptions.
+\\ \\Because physical environments are often described as stocastic processes and defined by power spectral density functions, generating physically meaningful sythetic environments requires generating sample functions of the underlying power spectra.  While the relationship between a spectral description and a time series sampled from that description is mathematically well defined, applying these methods to generate physical processes requires attention to the details of spectra normalization scaling, engineering unit conventions and sidedness of the spectral representation.  
+\\ \\This report synthesizes the basic mathematical background, presented with the intent of providing a self-consistent set of conventions for the practitioner.  Two common methods for time series generate are described, summation of cosines and fast Fourier transforms along with a complete example in MATLAB to illustrate the important details of considering scaling, units and sidedness.
 }
 
 % If CUI (Controlled Unclassified Information)
@@ -89,7 +88,7 @@ Simulating sample functions of a stochastic process defined by a power spectral 
 \researchchair{Kevin A. Smith}
 \departmentchair{Jomana Amara}
 \department{Vice Provost of Academic Leadership}
-%\SponsoringNotation{}
+\SponsoringNotation{}
 %
 % Your thesis begins here
 %
@@ -105,7 +104,7 @@ Simulating sample functions of a stochastic process defined by a power spectral 
 %\NPSfrontmatter            % NPS front matter follows
 %\DraftwatermarkOptions{stamp=false} % Starting at this point in the document, this commands the draftwatermark package to stop printing.
 % set the figure default size
-\newcommand{\SF}{0.7}
+\newcommand{\SF}{0.8}
 \newcommand{\SFb}{0.45}
 \newcommand{\SFPic}{0.45}
 \newcommand{\SFPlot}{0.45}
@@ -125,21 +124,25 @@ Simulating sample functions of a stochastic process defined by a power spectral 
 %\NPSlistOfTables
 %\NPSlistOfAcronymsFromFile{acronyms}
 
+% Acronyms
+\acrodef{psd}[PSD]{power spectral density}
+
+
 % Start layout for the NPS body
 \NPSbody
 
 \section{Introduction}
-Many of the environmental influences on an engineered system can be modeled as stochastic processes where the particular environmental conditions are described by the power spectrum density of the process.  For maritime vessels, waves and wind have important influences on control and perception.  Using spectral representations of these influences improves the connection between the simulated environment and field conditions.  This study is motivated by our recent work in simulation of environmental influences upon ocean robotic systems at and below the water surface \cite{bingham2019maritime, zhang22dave, choi22fasterrohtua}.
+Many of the environmental influences on an engineered system can be modeled as stochastic processes where the particular environmental conditions are described by the \ac{psd} of the process.  For maritime vessels, waves and wind have important influences on control and perception.  Using spectral representations of these influences improves the connection between the simulated environment and field conditions.  This study is motivated by our recent work in simulation of environmental influences upon ocean robotic systems at and below the water surface \cite{bingham2019maritime, zhang22dave, choi22fasterrohtua}.
 
-As pointed out in \cite{barbour15normalization} the variety of nomenclature, conventions and definitions in spectral analysis leads to considerable confusion and often improper use when applying these powerful techniques.
+As pointed out in \cite{barbour15normalization} the variety of nomenclature, conventions and definitions in spectral analysis leads to considerable confusion and often improper use when applying these techniques.
 
-This article describes techniques to generate a time series, $y(t)$, that is a sample function (a realization) of the one dimensional, univariate (1D-1V) stochastic process, $y_o(t)$, with a given one-sided power spectral density function $S_{y_{o}}(\omega)$, where $\omega$ is angular frequency in \unit[]{rad/s}.  %We present techniques based on \emph{spectral representation methods}.
-Methods for simulation of stochastic process include convariance decomposition, auto-regressive moving-average (ARMA), noise shower, scale refinement, turning band and spectral representation \cite{cao00simulation}.  This report discusses the spectral representation method.
+This article describes techniques to generate a time series, $y(t)$, that is a sample function (a realization) of the one dimensional, univariate (1D-1V) stochastic process, $y_o(t)$, with a given one-sided \ac{psd} function $S_{y_{o}}(\omega)$, where $\omega$ is angular frequency in \unit[]{rad/s}.  %We present techniques based on \emph{spectral representation methods}.
+Methods for simulation of stochastic process include covariance decomposition, auto-regressive moving-average (ARMA), noise shower, scale refinement, turning band and spectral representation \cite{cao00simulation}.  This report discusses the spectral representation method.
 
 
 \subsection{Background}
 Foundational work on spectral representation of a stochastic process was done by 
- Rice \cite{rice44mathematical1,rice45mathematical2}.  Some of the original approaches to generating a time series with given PSD were based the design of a linear filter for which white noise input would generate an output with the desired PSD.  Introduced sum of cosines \cite{borgman69ocean, shinozuka72monte}.  The methods covered in this reporot include the following:
+ Rice \cite{rice44mathematical1,rice45mathematical2}.  Some of the original approaches to generating a time series with given \ac{psd} were based the design of a linear filter for which white noise input would generate an output with the desired \ac{psd}.  Introduced sum of cosines \cite{borgman69ocean, shinozuka72monte}.  The methods covered in this report include the following:
 \begin{itemize}
 \item Linear filtering and spectral factorization.
 \item Spectral representation - sum of cosines
@@ -154,9 +157,9 @@ Our goal is to generate time series realizations of stochastic processes describ
 \begin{itemize}
 \item Expression of the frequency variable in angular or oscillation frequency.
 \item Scaling of the Fourier transform and Fourier series resulting from the choice of frequency units.
-\item Use of the two-sided or one-sided PSD.
+\item Use of the two-sided or one-sided \ac{psd}.
 \end{itemize}
-Often the details of the conventions used are ambiguous because these issues are not of primary importance in mathematics and physics domains, or in applications where both the transform and inverse transform are used.  However, for our engineering applications, maintaining the physical relevance between the expression of the PSD (in either frequency units and either sidedness) and the time series with physically meaningful units is important for the purposes of generating environmental influences that are statistically representative of the underlying spectral descriptions.  The contribution of this report is to provide a complete and consistent synthesis of the simulation generation process with explicit notation to make use of the various conventions for expressing PSD sidedness, frequency units and Fourier transform scaling.
+Often the details of the conventions used are ambiguous because these issues are not of primary importance in mathematics and physics domains, or in applications where both the transform and inverse transform are used.  However, for our engineering applications, maintaining the physical relevance between the expression of the \ac{psd} (in either frequency units and either sidedness) and the time series with physically meaningful units is important for the purposes of generating environmental influences that are statistically representative of the underlying spectral descriptions.  The contribution of this report is to provide a complete and consistent synthesis of the simulation generation process with explicit notation to make use of the various conventions for expressing \ac{psd} sidedness, frequency units and Fourier transform scaling.
 
 
 \section{Preliminaries}
@@ -208,21 +211,21 @@ Consider a zero-mean, real-valued, wide-sense stationary\footnote{Wide-sense sta
 \[
 R_{xx}(\tau) = E[x(t+\tau)x(t)] 
 \]
-where $E(\cdot)$ is the expectation operator. Under reasonable assumptions of continuity and differentiability, the autocorrelation and power spectral density (PSD) are Fourier transform pairs.  In units of oscillation frequency this is expressed as
+where $E(\cdot)$ is the expectation operator. Under reasonable assumptions of continuity and differentiability, the autocorrelation and \ac{psd} are Fourier transform pairs.  In units of oscillation frequency this is expressed as
 \begin{IEEEeqnarray}{rClCl}
   \IEEEyesnumber\label{e:ewkf} \IEEEyessubnumber*
   S_{xx}(f) & = & \int_{-\infty}^{\infty}R_{xx}(\tau)e^{-j (2 \pi f) \tau}d\tau & = & \mathcal{F}\{R_{xx}(\tau)\} \\
   R_{xx}(\tau) & = & \int_{-\infty}^{\infty}S_{xx}(f)e^{j (2 \pi f) \tau}df & = & \mathcal{F}^{-1}\{S_{xx}(f)\}
 \end{IEEEeqnarray}
 
-It is important to note $S_{xx}(f)$ refers to the {\bf two-sided} PSD.  For real-valued processes, the PSD is symmetric about $f=0$, i.e., $S_{xx}(f) = S_{xx}(-f)$.  Often times the {\bf one-sided} PSD, $\Sigma_{xx}(f)$    is used for just positive frequencies.  The two are related by
+It is important to note $S_{xx}(f)$ refers to the {\bf two-sided} \ac{psd}.  For real-valued processes, the \ac{psd} is symmetric about $f=0$, i.e., $S_{xx}(f) = S_{xx}(-f)$.  Often times the {\bf one-sided} \ac{psd}, $\Sigma_{xx}(f)$    is used for just positive frequencies.  The two are related by
 \begin{equation}
   \Sigma_{xx}(f) = 2 \, S_{xx}(f), \; \forall f \geq 0,
   \label{e:onetwo}
 \end{equation}
 and the integrals involving the one-sided spectrum have a lower limit of $0$ rather than $-\infty$.
 
-This relation allows us to illustrate the relation between PSD and power. The expected power in the process $x(t)$, equivalent to the variance of the process ($\sigma^2$), is
+This relation allows us to illustrate the relation between \ac{psd} and power. The expected power in the process $x(t)$, equivalent to the variance of the process ($\sigma^2$), is
 \begin{IEEEeqnarray}{rClClCl}
   \IEEEyesnumber\label{e:psd} \IEEEyessubnumber*
   E[x^2(t)] & = & \sigma^2 & = & R_{xx}(\tau=0) & = & \int_{-\infty}^{\infty}S_{xx}(f)e^{j (2 \pi f) (\tau=0)}df \\
@@ -230,10 +233,10 @@ This relation allows us to illustrate the relation between PSD and power. The ex
   & & & & & = & 2 \int_{0}^{\infty}S_{xx}(f) df \\
   & & & & & = & \int_{0}^{\infty}\Sigma_{xx}(f) df
 \end{IEEEeqnarray}
-which is the area under the PSD curve.
+which is the area under the \ac{psd} curve.
 
 \subsubsection{Power Spectral Density and Angular Frequency}
-Expressing the PSD in angular frequency ($\unit[\omega]{[rad/s]}$) can be error prone.  We define the two-sided PSD in angular frequency as a separate function, $G_{xx}(\omega)$.  This expression must also be consistent with the expected power relationships (\ref{e:psd}), so using the integration by substitution (\ref{e:ibs}) we find
+Expressing the \ac{psd} in angular frequency ($\unit[\omega]{[rad/s]}$) can be error prone.  We define the two-sided \ac{psd} in angular frequency as a separate function, $G_{xx}(\omega)$.  This expression must also be consistent with the expected power relationships (\ref{e:psd}), so using the integration by substitution (\ref{e:ibs}) we find
 \begin{IEEEeqnarray}{rClCl}
   \IEEEyesnumber\label{e:psdw} \IEEEyessubnumber*
   E[x^2(t)] & = & R_{xx}(\tau=0) & = & \int_{-\infty}^{\infty}S_{xx}(f) df \\
@@ -242,11 +245,11 @@ Expressing the PSD in angular frequency ($\unit[\omega]{[rad/s]}$) can be error 
   & & & = & \frac{1}{\pi} \int_{0}^{\infty}S_{xx}(f=\omega/(2 \pi)) d\omega \\
   & & & = & \frac{1}{2\pi}  \int_{0}^{\infty}\Sigma_{xx}(f=\omega/(2\pi)) d\omega .
 \end{IEEEeqnarray}
-Equations (\ref{e:psdw}) are applicable when provided with a PSD function expressed in oscillation frequency, but carrying out the integration in angular frequency.  If the PSD is expressed in angular frequency, the intention may be that
+Equations (\ref{e:psdw}) are applicable when provided with a \ac{psd} function expressed in oscillation frequency, but carrying out the integration in angular frequency.  If the \ac{psd} is expressed in angular frequency, the intention may be that
 \begin{equation}
   G_{xx}(\omega) = \frac{1}{2 \pi} S_{xx}(f = \omega/(2 \pi)
 \end{equation}
-where $G_{xx}(\omega)$ is the two-sided PSD in angular frequency and the corresponding one-sided PSD in angular frequency is
+where $G_{xx}(\omega)$ is the two-sided \ac{psd} in angular frequency and the corresponding one-sided \ac{psd} in angular frequency is
 \begin{equation}
   \Gamma_{xx}(\omega) = 2 G_{xx}(\omega) = \frac{1}{\pi} S_{xx}(f=\omega/(2\pi) = \frac{1}{2 pi} \Sigma_{xx}(f=\omega/(2\pi), \; \forall \omega \geq 0,
   \label{e:onetwow}
@@ -264,7 +267,7 @@ which implies that
 
 \subsection{Summation of Cosines Method}
 
-Using the explicit notation above, the simulation formula from \cite{shinozuka91simulation} can be applied to generate the time series $y^{(i)}(t)$ that is the $i$-th realization of the stochastic process $y(t)$ described by the two-sided power spectral density $G_{yy}(\omega)$ expressed in angular frequency.  This simulation formula converges to the series as $N \rightarrow \infty$:
+Using the explicit notation above, the simulation formula from \cite{shinozuka91simulation} can be applied to generate the time series $y^{(i)}(t)$ that is the $i$-th realization of the stochastic process $y(t)$ described by the two-sided \ac{psd} $G_{yy}(\omega)$ expressed in angular frequency.  This simulation formula converges to the series as $N \rightarrow \infty$:
 \begin{equation}
   y^{(i)}(t) = \sqrt{2} \sum_{n=0}^{N-1} A_n \cos(\omega_n t + \phi^{(i)}_n)
   \label{e:sumcosines}
@@ -276,7 +279,7 @@ A_n = (2 \, G_{yy}(\omega_n)\Delta \omega)^{1/2},  \;  n=0,1,2,...,N-1 \label{e:
 \omega_n = n \Delta \omega, \; n=0,1,2,...,N-1 \label{e:lrs}\\
 \Delta \omega = \omega_u / N.
 \end{IEEEeqnarray}
-The frequency sampling is $\Delta\omega$, the upper cut-off frequency, $\omega_u$, is the frequency beyond which the PSD may be assumed to be zero, $\phi^{(i)}_0, \phi^{(i)}_1, ... , \phi^{(i)}_{N-1}$ are the $i$-th realizations of random phase angles distributed uniformly over the interval $[0,2\pi)$
+The frequency sampling is $\Delta\omega$, the upper cut-off frequency, $\omega_u$, is the frequency beyond which the \ac{psd} may be assumed to be zero, $\phi^{(i)}_0, \phi^{(i)}_1, ... , \phi^{(i)}_{N-1}$ are the $i$-th realizations of random phase angles distributed uniformly over the interval $[0,2\pi)$
 and to avoid aliasing the time step (sampling time) is constrained by
 \begin{IEEEeqnarray}{rCl}
 \IEEEyesnumber\label{e:deltat} \IEEEyessubnumber*
@@ -299,7 +302,7 @@ is necessary and must be forced if $G_{yy}(0)\neq 0$.  The simulated time series
 \subsubsection{Periodicity, Simulation Error and Convergence}
 
 By examining the error between the time series ensemble autocorrelation and the
-desired autocorrelation is proportional we can quantify the quality of the time series reproduction of the target PSD. In \cite{shinozuka91simulation} the authors show, using \cite{conte17elementary},  that for the simulation equations (\ref{e:sumcosines}) and (\ref{e:sim}) the rate of convergence proportional to $1/N$.It is worth noting that the frequency sampling (\ref{e:lrs}) of the summation in (\ref{e:sumcosines}) is analogous to integral approximation by a left Riemann sum, which is consistent with an error function that decreases with $1/N$.
+desired autocorrelation is proportional we can quantify the quality of the time series reproduction of the target \ac{psd}. In \cite{shinozuka91simulation} the authors show, using \cite{conte17elementary},  that for the simulation equations (\ref{e:sumcosines}) and (\ref{e:sim}) the rate of convergence proportional to $1/N$.It is worth noting that the frequency sampling (\ref{e:lrs}) of the summation in (\ref{e:sumcosines}) is analogous to integral approximation by a left Riemann sum, which is consistent with an error function that decreases with $1/N$.
 
 An alternative approach is to use frequency sampling analogous to a middle Riemann sum method by sampling of the spectrum according to 
 \begin{equation}
@@ -375,7 +378,7 @@ The generated time series $y^{(i)}(p \Delta t)$ is periodic with $T_0 = 2 \pi/\D
 
 Generating physically meaningful time series for engineering applications is an important part of an overall \emph{simulation framework},  The simulation framework refers to total simulation scenario being put to use and can contain such aspects as physics engines, sensor and actuator models, visual rendering, communication interfaces, etc.  To support engineering analysis in this context, the simulation method should have the following characteristics:
 \begin{enumerate}
-\item The error between the PSD (or autocorrelation) of the generated sample function and that of the original stochastic process should be small.
+\item The error between the \ac{psd} (or autocorrelation) of the generated sample function and that of the original stochastic process should be small.
 \item The periodicity and temporal sampling of the time series should be consistent with the simulation framework.
 \item The computational requirements of the time series generation should be sufficiently small as to not affect the overall simulation framework.  For example, some simulation scenarios require running in real-time.
 \item The data storage requirements for the time series should be reasonable for the simulation framework.
@@ -425,11 +428,11 @@ We consider the numerical example from \cite{shinozuka91simulation}
   G_{yy}(\omega) = \frac{1}{4} \sigma^2 b^3 \omega^2 e^{-b|\omega|}, \; \; -\infty < \omega < \infty
   \label{e:expsd}
 \end{equation}
-where constants are chosen as $\sigma=1$ and $\b=\unit[1]{s}$. The cutoff frequency is  $\omega_u = \unit[4 \pi]{rad/s} $.
+where constants are chosen as $\sigma=1$ and $b=\unit[1]{s}$. The cutoff frequency is  $\omega_u = \unit[4 \pi]{rad/s} $.
 \begin{figure}[hbt!]
   \centering
   \includegraphics[width=\FigWidth\textwidth]{images/two_sided.png}
-  \caption{Two-sided PSD from (\ref{e:expsd}).}
+  \caption{Two-sided \ac{psd} from (\ref{e:expsd}).}
   \label{f:psd}
 \end{figure}
 We choose the maximum frequency for all methods to be $\omega_{max}=2\omega_u$ and choose $N=M=2^{12}$ which results in a $T_0 = \unit[1024]{s}$ and $\Delta t = \unit[0.25]{rad/s}$.  We generate a series of $M$ random phase values, $\phi^{(i)}_n$ for use in all methods.
@@ -449,7 +452,7 @@ We implement both the sum of cosines and FFT methods for generating the sample f
 \end{figure}
 The figure illustrates that the sample functions generated by the two methods are equivalent to within numerical precision.
 
-To verify that the generated sample functions are consistent with the original target PSD, we estimate the PSD from each sample function based on Welch's method with 1024 point FFT, Hamming windowing and 44\% overlap.  The estimated PSDs and the original target PSD are shown in Figure~\ref{f:psdest}.  Note that the estimated PSDs are the one-sided PSDs, $\Gamma(\omega)$, while the original PSD from (\ref{e:expsd}) and Figure~\ref{f:psd} is two-sided.
+To verify that the generated sample functions are consistent with the original target \ac{psd}, we estimate the \ac{psd} from each sample function based on Welch's method with 1024 point FFT, Hamming windowing and 44\% overlap.  The estimated PSDs and the original target PSD are shown in Figure~\ref{f:psdest}.  Note that the estimated PSDs are the one-sided PSDs, $\Gamma(\omega)$, while the original PSD from (\ref{e:expsd}) and Figure~\ref{f:psd} is two-sided.
 \begin{figure}[hbt!]
   \centering
   \includegraphics[width=\FigWidth\textwidth]{images/psdest.png}
@@ -459,6 +462,11 @@ To verify that the generated sample functions are consistent with the original t
 The figure illustrates that both time series have equivalent estimated PSDs and that they approximate the target PSD.  The FFT method ran $\approx 60$ times faster than the summation of cosines method: \unit[0.14]{s} vs. \unit[0.0024]{s}.  Repeating the tests various values for $M$ suggests that the speed-up ratio for the FFT method is $T_{soc}/T_{fft} = 0.04 \, M$ where $T_{soc}/T_{fft}$ is the ratio of computation time for the summation of cosines method vs. the FFT method.
 
 The source code for this example is here: \url{https://github.com/bsb808/OceanNotes/tree/master/src/gen_timeseries_from_psd}.
+
+
+\section{Conclusion}
+This report documents the implementation details necessary to generate time series samples of physical processes described via an empirical \ac{psd}. It is import to maintain consistency with the scaling and conventions employed in order to generate synthetic samples statistically representative of the target phenomena.  Theses details are put into practice in MATLAB reference implementation to illustrate both summation of cosines and FFT methods to generate equivalent time series and then show that the simulated time series are statistically representative of the underlying \ac{psd}.
+
 
 % REFERENCES
 % List all your BibTeX reference source files (ending in *.bib extension)
