Updates from Overleaf

--- a/nps_sf298.sty
+++ b/nps_sf298.sty
@@ -448,7 +448,8 @@
     \put(  4,614){\makebox(0,0)[bl]{\sf@ReportDate}}
     \put(148,614){\makebox(0,0)[bl]{\sf@ReportType}}
     \put(363,614){\makebox(0,0)[bl]{\sf@DatesCovered}}
-    \put(  4,523){\sf@parbox( 80,324){\sf@Title}}
+    %\put(  4,523){\sf@parbox( 80,324){\sf@Title}}
+    \put(  4,523){\sf@parbox( 80, 300){\sf@Title}}
     \put(328,585){\makebox(0,0)[bl]{\sf@ContractNumber}}
     \put(328,555){\makebox(0,0)[bl]{\sf@GrantNumber}}
     \put(328,525){\makebox(0,0)[bl]{\sf@ProgramElementNumber}}
